modules/alb/main.tf
resource "aws_lb"  "tools" {
    name               = local.name
    internal           = false
    load_balancer_type = "application"
    security_groups    = [aws_security_group.main.id]
    subnets            = data.aws_subnets.subnets.ids

    tags = {
      Environment = "tools"
    }
}


locals  {
  name = "tools"
}


resource "aws_security_group" "main" {
  name        = "${local.name}-alb-sg"
  description = "${local.name}-alb-sg"
  vpc_id      =  var.vpc_id

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    description      = "http"
  }

  ingress {
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    description      = "https"
  }


  tags = {
    Name = "${local.name}-sg"
  }
}


resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.tools.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = var.acm_arn

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "404 page not found"
      status_code  = "200"
    }
  }
}


resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.tools.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}
